--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,25 @@ set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 message("Current CPU archtecture: ${CMAKE_SYSTEM_PROCESSOR}")
 
+message(STATUS "Ros version : $ENV{ROS_DISTRO}")
+if ($ENV{ROS_DISTRO} MATCHES "iron")
+  add_definitions(-DUSE_IRON_VERSION)
+elseif ($ENV{ROS_DISTRO} MATCHES "humble")
+  add_definitions(-DUSE_HUMBLE_VERSION)
+elseif ($ENV{ROS_DISTRO} MATCHES "galactic")
+  add_definitions(-DUSE_GALACTIC_VERSION)
+elseif ($ENV{ROS_DISTRO} MATCHES "foxy")
+  add_definitions(-DUSE_FOXY_VERSION)
+elseif ($ENV{ROS_DISTRO} MATCHES "eloquent")
+  add_definitions(-DUSE_ELOQUENT_VERSION)
+elseif ($ENV{ROS_DISTRO} MATCHES "dashing")
+  add_definitions(-DUSE_DASHING_VERSION)
+elseif ($ENV{ROS_DISTRO} MATCHES "noetic")
+  add_definitions(-DUSE_ROS_NORTIC_VERSION)
+elseif ($ENV{ROS_DISTRO} MATCHES "melodic")
+  add_definitions(-DUSE_ROS_MELODIC_VERSION)
+endif()
+
 if(CMAKE_SYSTEM_PROCESSOR MATCHES "(x86)|(X86)|(amd64)|(AMD64)")
   include(ProcessorCount)
   ProcessorCount(N)
